--- a/public/now.json
+++ b/public/now.json
@@ -1,6 +1,6 @@
 {
    "version": 2,
-   "name": "buena-suerte-portfolio",
+   "name": "apprendere",
    "routes": [
        {
          "src": "^/static/(.*)",
